--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -262,7 +262,7 @@
 
           <td>{{ customer.telephone }}</td>
           <td>{{ customer.mobile }}</td>
-          <td>{{ customer.status ==1?'DEACTIVE':"ACTIVE" }}</td>
+          <td>{{ customer.status ==1?'Deactivated':"Activated" }}</td>
           <td
             pTooltip="{{ customer.email }}"
             tooltipPosition="top"
