--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -159,7 +159,7 @@
                 <div class="col-sm"></div>
                 <span>
                   <button
-                    class="btn btn-block btn-primary ml-10 mt-10 text-uppercase"
+                    class="btn btn-block btn-primary ml-10 mt-10"
                     type="submit"
                     (click)="logout()"
                   >
