change user type

--- a/src/app/methodologies/methodologies.component.html
+++ b/src/app/methodologies/methodologies.component.html
@@ -112,7 +112,7 @@
                 <td>
                   
                   <button 
-                  *ngIf="userrole == 'ICAT Admin'"
+                  *ngIf="userrole == 'ICAT admin'"
                   type="button"
                   pButton
                   pRipple
@@ -129,7 +129,7 @@
                 </td>
                 <td>
                   <button 
-                  *ngIf="userrole == 'ICAT Admin'"
+                  *ngIf="userrole == 'ICAT admin'"
                   type="button"
                   pButton
                   pRipple
