--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -113,7 +113,7 @@
         </div>
       </div>
 
-      <div class="col-4" *ngIf="!['PMU Admin', 'PMU User'].includes(userrole)">
+      <div class="col-4" *ngIf="!['PMU admin', 'PMU user'].includes(userrole)">
         <div
           class="
             d-flex
