--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
            
           "
               class="sidebar-items--link align-items-start"
-              [routerLink]="['/instituion']"
+              [routerLink]="['/institution']"
               routerLinkActive="selected"
             >
               <div class=""></div>
