Make region optional

--- a/src/app/country-registry/add-country/add-country.component.html
+++ b/src/app/country-registry/add-country/add-country.component.html
@@ -30,8 +30,8 @@
               <div class="row p-2">
                 <div class="col-12 col-md-10">
                   <div class="p-field">
-                    <label for="fRegione">Region*</label>
-                    <input type="text" name="Regionme" [(ngModel)]="cou.region" readonly class="form-control" />
+                    <label for="fRegione">Region</label>
+                    <input type="text" name="Regionme" [(ngModel)]="cou.region" class="form-control" />
     
                   </div>
                 </div>
