[CPIT-599] Password expiration token improvement

--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -47,8 +47,8 @@
     >
   </p>
   <p class="info-message text-info" *ngIf="jobDone">
-    Your password reset request has been sent to your registered email address
-    with us.
+    Your password reset request has been sent to your registered email address.
+    <br/><strong>Note:</strong> The activation code is valid for 72 hours.
   </p>
   <button
     class="btn btn-primary btn-block  btn-lg mt-35"
