--- a/src/app/login/set-password/set-password.component.html
+++ b/src/app/login/set-password/set-password.component.html
@@ -11,12 +11,12 @@
               <div class="p-field col-12 col-md-8">
                 <label class="font-weight-bold">Email</label>
                 <span class="p-input-icon-right" style="width: 400px">
-                  <input 
-                    id="email" 
-                    pInputText 
+                  <input
+                    id="email"
+                    pInputText
                     formControlName="email"
                     type="email"
-                    placeholder="Email" 
+                    placeholder="Email"
                     class="form-control">
                 </span>
               </div>
@@ -29,12 +29,12 @@
                 <label class="font-weight-bold">New Password</label>
                 <span class="p-input-icon-right" style="width: 400px">
                   <i [class]="passwordVisible ? 'pi pi-eye-slash' : 'pi pi-eye'" class="pass-icon" (click)="togglePasswordVisibility('password')"></i>
-                  <input 
-                    id="password" 
-                    pInputText 
+                  <input
+                    id="password"
+                    pInputText
                     formControlName="password"
                     [type]="passwordVisible ? 'text' : 'password'"
-                    placeholder="New Password" 
+                    placeholder="New Password"
                     class="form-control">
                 </span>
               </div>
@@ -51,11 +51,11 @@
                 <label class="font-weight-bold">Confirm Password</label>
                 <span class="p-input-icon-right" style="width: 400px">
                   <i [class]="confirmPasswordVisible ? 'pi pi-eye-slash' : 'pi pi-eye'" class="pass-icon" (click)="togglePasswordVisibility('confirmPassword')"></i>
-                  <input 
-                    pInputText 
+                  <input
+                    pInputText
                     formControlName="confirmPassword"
                     [type]="confirmPasswordVisible ? 'text' : 'password'"
-                    placeholder="Confirm Password" 
+                    placeholder="Confirm Password"
                     class="form-control">
                 </span>
               </div>
@@ -67,10 +67,10 @@
               </p>
             </div>
 
-            <button 
+            <button
               type="submit"
-              class="btn btn-primary btn-block text-uppercase btn-lg mt-35" 
-              [disabled]="resetPasswordForm.invalid">
+              class="btn btn-primary btn-block text-uppercase btn-lg mt-35"
+              [disabled]="resetPasswordForm.invalid || isLoading">
               Reset Password
             </button>
           </form>
@@ -79,3 +79,44 @@
     </div>
   </div>
 </section>
+
+<p-dialog header=" " [(visible)]="isSuccessful">
+  <div class="text-center pr-30 pl-30 mw-460">
+    <img class="mb-20" src="../../../../assets/images/confirm-icon.jpg" />
+    <h6 class="mb-20">Success</h6>
+    <p>Your password has been reset successfully.</p>
+    <button class="btn btn-primary mt-15" (click)="gotoLogin()">LOGIN</button>
+  </div>
+</p-dialog>
+
+<p-dialog header=" " [(visible)]="isErrorPopup">
+  <div class="text-center pr-30 pl-30 mw-460">
+    <img class="mb-20" src="../../../../assets/images/error-image.png" />
+    <h5 class="text-danger-light">Oops</h5>
+    <h6 class="mb-20 text-danger-light">Something went wrong</h6>
+    <p>{{ errorMessage || 'Please try again.' }}</p>
+    <button class="btn btn-primary mt-15" (click)="isErrorPopup = false">Close</button>
+  </div>
+</p-dialog>
+
+<p-dialog header=" " [(visible)]="isExpiredPopup">
+  <div class="text-center pr-30 pl-30 mw-460">
+    <img class="mb-20" src="../../../../assets/images/error-image.png" />
+    <h5 class="text-warning">Code Expired</h5>
+    <h6 class="mb-20 text-warning">Your activation code has expired</h6>
+    <p>Activation codes are valid for 72 hours. Please request a new code to continue.</p>
+    <div class="mt-20">
+      <button class="btn btn-primary mr-10" (click)="resendActivationCode()">Request New Code</button>
+      <button class="btn btn-secondary" (click)="closeExpiredPopup()">Close</button>
+    </div>
+  </div>
+</p-dialog>
+
+<p-dialog header=" " [(visible)]="isResendSuccess">
+  <div class="text-center pr-30 pl-30 mw-460">
+    <img class="mb-20" src="../../../../assets/images/confirm-icon.jpg" />
+    <h6 class="mb-20">New Code Sent!</h6>
+    <p>A new activation code has been sent to your email address. Please check your inbox and enter the new code.</p>
+    <button class="btn btn-primary mt-15" (click)="closeResendSuccessPopup()">OK</button>
+  </div>
+</p-dialog>
