Revert email activation changes

--- a/src/app/login/set-password/set-password.component.html
+++ b/src/app/login/set-password/set-password.component.html
@@ -3,57 +3,43 @@
     <div class="row">
       <div class="col-md-6 login-content-wrapper">
         <div class="login-inner">
-          <div class="row mb-2">
-            <div class="col-md-2">
-              <img class="logo_img active_mod"
-                src="https://climateactiontransparency.org/wp-content/themes/custom/assets/i/logo/logo_yellow.svg"
-                alt="logo" height="45px" style="padding-right: 2%;" (click)="toLanding()" />
-            </div>
-            <div class="col-md-5">
-              <img class="logo_img active_mod"
-                src="https://climateactiontransparency.org/wp-content/themes/custom/assets/i/logo/logo_text.svg"
-                alt="logo text" height="40px" (click)="toLanding()" />
-            </div>
-          </div>
-
-          <h2 class="mt-4">{{ pageTitle }}</h2>
-          <p class="mb-35">{{ pageDescription }}</p>
+          <h4>Reset Your Password</h4>
+          <p class="mb-35">Enter details below to <span class="text-info font-weight-bold">reset the password</span> of your account.</p>
 
           <form [formGroup]="resetPasswordForm" (ngSubmit)="resetPassword()">
-            <div class="form-group" *ngIf="!emailFromUrl">
+            <div class="form-group">
               <div class="p-field col-12 col-md-8">
                 <label class="font-weight-bold">Email</label>
-                <input
-                  pInputText
-                  formControlName="email"
-                  type="email"
-                  placeholder="Enter your email"
-                  class="form-control">
+                <span class="p-input-icon-right" style="width: 400px">
+                  <input
+                    id="email"
+                    pInputText
+                    formControlName="email"
+                    type="email"
+                    placeholder="Email"
+                    class="form-control">
+                </span>
               </div>
               <p class="info-message text-danger" *ngIf="emailControl.hasError('required') && emailControl.touched">
                 Email is required
               </p>
-              <p class="info-message text-danger" *ngIf="emailControl.hasError('email') && emailControl.touched && !emailControl.hasError('required')">
-                Invalid email address
-              </p>
             </div>
-
             <div class="form-group">
               <div class="p-field col-12 col-md-8">
                 <label class="font-weight-bold">New Password</label>
-                <span class="p-input-icon-right" style="width: 100%;">
-                  <i [class]="passwordVisible ? 'pi pi-eye-slash' : 'pi pi-eye'" class="pass-icon"
-                    (click)="togglePasswordVisibility('password')"></i>
+                <span class="p-input-icon-right" style="width: 400px">
+                  <i [class]="passwordVisible ? 'pi pi-eye-slash' : 'pi pi-eye'" class="pass-icon" (click)="togglePasswordVisibility('password')"></i>
                   <input
+                    id="password"
                     pInputText
                     formControlName="password"
                     [type]="passwordVisible ? 'text' : 'password'"
-                    placeholder="Enter new password"
+                    placeholder="New Password"
                     class="form-control">
                 </span>
               </div>
               <p class="info-message text-danger" *ngIf="passwordControl.hasError('pattern') && passwordControl.touched">
-                Must contain at least 8 characters, 1 uppercase, 1 number, and 1 special character
+                Password must contain at least 8 characters, 1 upper case letter, 1 number, and 1 special character
               </p>
               <p class="info-message text-danger" *ngIf="passwordControl.hasError('required') && passwordControl.touched">
                 Password is required
@@ -63,59 +49,43 @@
             <div class="form-group">
               <div class="p-field col-12 col-md-8">
                 <label class="font-weight-bold">Confirm Password</label>
-                <span class="p-input-icon-right" style="width: 100%;">
-                  <i [class]="confirmPasswordVisible ? 'pi pi-eye-slash' : 'pi pi-eye'" class="pass-icon"
-                    (click)="togglePasswordVisibility('confirmPassword')"></i>
+                <span class="p-input-icon-right" style="width: 400px">
+                  <i [class]="confirmPasswordVisible ? 'pi pi-eye-slash' : 'pi pi-eye'" class="pass-icon" (click)="togglePasswordVisibility('confirmPassword')"></i>
                   <input
                     pInputText
                     formControlName="confirmPassword"
                     [type]="confirmPasswordVisible ? 'text' : 'password'"
-                    placeholder="Confirm your password"
+                    placeholder="Confirm Password"
                     class="form-control">
                 </span>
               </div>
               <p class="info-message text-danger" *ngIf="confirmPasswordControl.hasError('required') && confirmPasswordControl.touched">
-                Please confirm your password
+                Confirm password is required
               </p>
-              <p class="info-message text-danger" *ngIf="resetPasswordForm.hasError('passwordMismatch') && confirmPasswordControl.touched && !confirmPasswordControl.hasError('required')">
+              <p class="info-message text-danger" *ngIf="resetPasswordForm.hasError('passwordMismatch') && confirmPasswordControl.touched">
                 Passwords do not match
               </p>
             </div>
 
             <button
               type="submit"
-              class="btn btn-primary btn-block btn-lg mt-35"
+              class="btn btn-primary btn-block text-uppercase btn-lg mt-35"
               [disabled]="resetPasswordForm.invalid || isLoading">
-              {{ isLoading ? 'Please wait...' : submitLabel }}
+              Reset Password
             </button>
-
-            <p class="mt-15">
-              <a href="javascript:void(0)" (click)="gotoLogin()" class="text-info">Back to login</a>
-            </p>
           </form>
         </div>
       </div>
-      <div class="col-md-6 login-back"></div>
     </div>
   </div>
 </section>
 
-<footer class="bg-transparent border-0">
-  <div class="container-fluid mw-1920">
-    <div class="row">
-      <div class="col-md-12">
-        <p class="text-gray">&copy; 2022. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<p-dialog header=" " [(visible)]="isSuccessful" [closable]="false">
+<p-dialog header=" " [(visible)]="isSuccessful">
   <div class="text-center pr-30 pl-30 mw-460">
     <img class="mb-20" src="../../../../assets/images/confirm-icon.jpg" />
-    <h6 class="mb-20">{{ isActivation ? 'Account Activated!' : 'Password Updated!' }}</h6>
-    <p>{{ isActivation ? 'Your account has been activated successfully. You can now log in.' : 'Your password has been updated successfully.' }}</p>
-    <button class="btn btn-primary mt-15" (click)="gotoLogin()">LOG IN</button>
+    <h6 class="mb-20">Success</h6>
+    <p>Your password has been reset successfully.</p>
+    <button class="btn btn-primary mt-15" (click)="gotoLogin()">LOGIN</button>
   </div>
 </p-dialog>
 
@@ -132,11 +102,11 @@
 <p-dialog header=" " [(visible)]="isExpiredPopup">
   <div class="text-center pr-30 pl-30 mw-460">
     <img class="mb-20" src="../../../../assets/images/error-image.png" />
-    <h5 class="text-warning">Link Expired</h5>
-    <h6 class="mb-20 text-warning">Your {{ isActivation ? 'activation' : 'password reset' }} link has expired</h6>
-    <p>Links are valid for 72 hours. Click below to receive a new one.</p>
+    <h5 class="text-warning">Code Expired</h5>
+    <h6 class="mb-20 text-warning">Your activation code has expired</h6>
+    <p>Activation codes are valid for 72 hours. Please request a new code to continue.</p>
     <div class="mt-20">
-      <button class="btn btn-primary mr-10" (click)="resendActivationCode()">Send New Link</button>
+      <button class="btn btn-primary mr-10" (click)="resendActivationCode()">Request New Code</button>
       <button class="btn btn-secondary" (click)="closeExpiredPopup()">Close</button>
     </div>
   </div>
@@ -145,8 +115,8 @@
 <p-dialog header=" " [(visible)]="isResendSuccess">
   <div class="text-center pr-30 pl-30 mw-460">
     <img class="mb-20" src="../../../../assets/images/confirm-icon.jpg" />
-    <h6 class="mb-20">New Link Sent!</h6>
-    <p>A new {{ isActivation ? 'activation' : 'password reset' }} link has been sent to your email. Please check your inbox.</p>
+    <h6 class="mb-20">New Code Sent!</h6>
+    <p>A new activation code has been sent to your email address. Please check your inbox and enter the new code.</p>
     <button class="btn btn-primary mt-15" (click)="closeResendSuccessPopup()">OK</button>
   </div>
 </p-dialog>
